# Bacteria-detection

./: README.md
sample/camera/: OAT.xml
sample/camera/ai/asr/keyword_spotting/: kws_manager.cpp
sample/camera/ai/cv/image_classification/: BUILD.gn  camera_manager.h
sample/camera/cameraApp/cameraApp/src/main/cpp/: camera_ability_slice.cpp
sample/camera/launcher/launcher/src/main/: config.json
sample/camera/media/: BUILD.gn  audio_capture_sample.cpp  camera_sample.cpp
sample/camera/setting/setting/src/main/: config.json
sample/camera/setting/setting/src/main/cpp/: setting_display_ability_slice.cpp  wpa_work.c  wpa_work.h
sample/wifi-iot/app/: BUILD.gn
sample/wifi-iot/app/TJC_ADC_UART/: BUILD.gn  uart_tjc.c
sample/wifi-iot/app/cloud_oc/: ADC.c  BUILD.gn  iot_cloud_oc.c  uart_tjc.c
sample/wifi-iot/app/hw_cloud/: BUILD.gn  hw_cloud_entry.c  wifi_entry.c
sample/wifi-iot/app/iot_mqtt/: BUILD.gn  iot_mqtt.c
sample/wifi-iot/app/led_example/: led_example.c
standard/contactsdata/: BUILD.gn  OAT.xml  README.en.md  README.md  config.json  ohos.build
standard/contactsdata/ability/account/include/: account_change_event.h  account_data_collection.h  account_event_manager.h  account_manager.h  account_sync.h
standard/contactsdata/ability/account/src/: account_change_event.cpp  account_data_collection.cpp  account_event_manager.cpp  account_manager.cpp  account_sync.cpp
standard/contactsdata/ability/common/include/: common.h  contacts_columns.h  hilog_wrapper.h
standard/contactsdata/ability/common/utils/include/: async_task.h  contacts_common_event.h  contacts_json_utils.h  contacts_path.h  contacts_string_utils.h  file_utils.h  merge_utils.h  predicates_convert.h  sql_analyzer.h  uri_utils.h
standard/contactsdata/ability/common/utils/src/: contacts_common_event.cpp  contacts_json_utils.cpp  contacts_path.cpp  contacts_string_utils.cpp  file_utils.cpp  merge_utils.cpp  predicates_convert.cpp  sql_analyzer.cpp  uri_utils.cpp
standard/contactsdata/ability/datadisasterrecovery/include/: database_disaster_recovery.h
standard/contactsdata/ability/datadisasterrecovery/src/: database_disaster_recovery.cpp
standard/contactsdata/ability/merge/include/: candidate.h  candidate_status.h  match_candidate.h  merger_contacts.h
standard/contactsdata/ability/merge/src/: candidate.cpp  candidate_status.cpp  match_candidate.cpp  merger_contacts.cpp
standard/contactsdata/ability/sinicization/include/: character_transliterate.h  construction_name.h
standard/contactsdata/ability/sinicization/src/: character_transliterate.cpp  construction_name.cpp
standard/contactsdata/contacts/: BUILD.gn
standard/contactsdata/contacts/include/: contacts_api.h  contacts_build.h  contacts_control.h  contacts_napi_common.h  contacts_napi_object.h  hilog_wrapper_api.h  result_convert.h
standard/contactsdata/contacts/src/: contacts_api.cpp  contacts_build.cpp  contacts_control.cpp  native_module.cpp  result_convert.cpp
standard/contactsdata/dataBusiness/calllog/include/: calllog_ability.h  calllog_database.h
standard/contactsdata/dataBusiness/calllog/src/: calllog_ability.cpp  calllog_database.cpp
standard/contactsdata/dataBusiness/contacts/include/: contacts.h  contacts_account.h  contacts_data_ability.h  contacts_database.h  contacts_type.h  contacts_update_helper.h  profile_database.h  raw_contacts.h
standard/contactsdata/dataBusiness/contacts/src/: contacts.cpp  contacts_account.cpp  contacts_data_ability.cpp  contacts_database.cpp  contacts_type.cpp  contacts_update_helper.cpp  profile_database.cpp  raw_contacts.cpp
standard/contactsdata/dataBusiness/quicksearch/include/: contacts_search.h
standard/contactsdata/dataBusiness/quicksearch/src/: contacts_search.cpp
standard/contactsdata/dataBusiness/voicemail/include/: voicemail_ability.h  voicemail_database.h
standard/contactsdata/dataBusiness/voicemail/src/: voicemail_ability.cpp  voicemail_database.cpp
standard/contactsdata/jstest/: Calllog_test.js  ContactCard_test.js  ContactMerge_test.js  Contacts_test.js  Groups_test.js  List.test.js  ObjectCallback.js  ObjectInterface_test.js  Performance_test.js  Stability_test.js  Voicemail_test.js  common.js  recovery_test.js
standard/contactsdata/test/: BUILD.gn
standard/contactsdata/test/unittest/include/: base_test.h  calllogability_test.h  calllogfuzzyquery_test.h  contactability_test.h  contactgroup_test.h  contactpinyin_test.h  contactprofile_test.h  contactquery_test.h  mergecontact_test.h  performance_test.h  recovery_test.h  stability_test.h  test_common.h  voicemailability_test.h
standard/contactsdata/test/unittest/src/: base_test.cpp  calllogability_test.cpp  calllogfuzzyquery_test.cpp  contactability_test.cpp  contactgroup_test.cpp  contactpinyin_test.cpp  contactprofile_test.cpp  contactquery_test.cpp  mergecontact_test.cpp  performance_test.cpp  recovery_test.cpp  stability_test.cpp  voicemailability_test.cpp
standard/hap/: .gitattributes  Airquality_Demo.hap  BUILD.gn  Calc_Demo.hap  Clock_Demo.hap  DeviceManager_UI.hap  Ecg_Demo.hap  FilePicker.hap  Flashlight_Demo.hap  Media_Library.hap  Media_Scanner.hap  MobileDataSettings.hap  Music_Demo.hap  OAT.xml  PermissionManager.hap  Photos.hap  README.md  README_zh.md  Settings.hap  Settings_FaceAuth.hap  Shopping_Demo.hap  adminprovisioning.hap  kikaInput.hap  ohos.build
standard/photos/: README_zh.md  build-profile.json5  hvigorfile.js  package.json
standard/photos/AppScope/: app.json5
standard/photos/AppScope/resources/base/element/: string.json
standard/photos/entry/: build-profile.json5
standard/photos/entry/src/main/: module.json5
standard/photos/entry/src/main/ets/Application/: AbilityStage.ts
standard/photos/entry/src/main/ets/MainAbility/: MainAbility.ts
standard/photos/entry/src/ohosTest/: module.json5
standard/photos/entry/src/ohosTest/ets/TestAbility/: TestAbility.ts
standard/settings/: OAT.xml  build.gradle  gradle.properties  local.properties  settings.gradle
standard/settings/napi/settings/: napi_settings_init.cpp
(+216 files in other folders)
